[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MagicianSpinningBlast.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Ability2-SpinningBlast.png" type="Texture" id=2]
[ext_resource path="res://Sounds/SpinningBlast.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19.626, 21.7556 )

[node name="MagicianSpinningBlast" type="Area2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 2147483650
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.104996 )
frames = SubResource( 5 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.314972, -0.73495 )
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -1.32583, -1.23744 )
scale = Vector2( 2.46725, 2.25511 )

[node name="SpinningBlastSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_MagicianBasicBlast_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
